@@ -27,6 +27,7 @@
 #include <k3bthroughputestimator.h>
 #include <k3bgrowisofshandler.h>
 #include <k3bglobalsettings.h>
+#include <k3binterferingsystemshandler.h>
 
 #include <kdebug.h>
 #include <klocale.h>
@@ -50,6 +51,8 @@ public:
   int lastProcessedSize;
 
   K3bGrowisofsHandler* gh;
+
+  K3bInterferingSystemsHandler* interferingSystemHndl;
 };
 
 
@@ -62,6 +65,10 @@ K3bGrowisofsImager::K3bGrowisofsImager( K3bDataDoc* doc, K3bJobHandler* jh, QObj
   d->speedEst = new K3bThroughputEstimator( this );
   connect( d->speedEst, SIGNAL(throughput(int)),
 	   this, SLOT(slotThroughput(int)) );
+
+  d->interferingSystemHndl = new K3bInterferingSystemsHandler( this );
+  connect( d->interferingSystemHndl, SIGNAL(infoMessage(const QString&, int)),
+	   this, SIGNAL(infoMessage(const QString&, int)) );
 
   d->gh = new K3bGrowisofsHandler( this );
   connect( d->gh, SIGNAL(infoMessage(const QString&, int)),
@@ -238,6 +245,8 @@ void K3bGrowisofsImager::start()
 
   emit newSubTask( i18n("Preparing write process...") );
 
+  d->interferingSystemHndl->disable( m_doc->burner() );
+
   if( !m_process->start( KProcess::NotifyOnExit, KProcess::AllOutput) ) {
     // something went wrong when starting the program
     // it "should" be the executable
@@ -311,6 +320,8 @@ void K3bGrowisofsImager::slotProcessExited( KProcess* p )
   m_processExited = true;
 
   cleanup();
+
+  d->interferingSystemHndl->enable();
 
   if( m_canceled ) {
     emit canceled();
