@@ -27,6 +27,7 @@
 #include <k3bglobals.h>
 #include <k3bthroughputestimator.h>
 #include <k3bglobalsettings.h>
+#include <k3binterferingsystemshandler.h>
 
 #include <qstring.h>
 #include <qstringlist.h>
@@ -65,6 +66,8 @@ public:
   QValueList<Track> tracks;
 
   KTempFile* cdTextFile;
+
+  K3bInterferingSystemsHandler* interferingSystemHndl;
 };
 
 
@@ -79,6 +82,10 @@ K3bCdrecordWriter::K3bCdrecordWriter( K3bDevice::Device* dev, K3bJobHandler* hdl
   d->speedEst = new K3bThroughputEstimator( this );
   connect( d->speedEst, SIGNAL(throughput(int)),
 	   this, SLOT(slotThroughput(int)) );
+
+  d->interferingSystemHndl = new K3bInterferingSystemsHandler( this );
+  connect( d->interferingSystemHndl, SIGNAL(infoMessage(const QString&, int)),
+	   this, SIGNAL(infoMessage(const QString&, int)) );
 
   m_process = 0;
   m_writingMode = K3b::TAO;
@@ -319,6 +326,8 @@ void K3bCdrecordWriter::start()
   m_totalSize = 0;
 
   emit newSubTask( i18n("Preparing write process...") );
+
+  d->interferingSystemHndl->disable( burnDevice() );
 
   if( !m_process->start( KProcess::NotifyOnExit, KProcess::All ) ) {
     // something went wrong when starting the program
@@ -631,6 +640,8 @@ void K3bCdrecordWriter::slotProcessExited( KProcess* p )
   // remove temporary cdtext file
   delete d->cdTextFile;
   d->cdTextFile = 0;
+
+  d->interferingSystemHndl->enable();
 
   if( d->canceled ) {
     // this will unblock and eject the drive and emit the finished/canceled signals
